--- a/app/partials/home.html
+++ b/app/partials/home.html
@@ -3,5 +3,12 @@
 		<div class="page-header">
 			<h2>Welcome</h2>
 		</div>
+		<div>
+			<p>This site contains student artwork that has been piled in the attic or tucked into a closet.</p>
+			<p>Please browse the gallery under "Works" and pick out pieces you like.</p>
+		</div> 
+		<div class="home-image">
+			<img class="img-responsive" src="images/bugs.png" alt="bugs">
+		</div>
 	</div>
 </div>
