--- a/app/partials/work.html
+++ b/app/partials/work.html
@@ -1,7 +1,7 @@
 <div class="content">
 	<div class="container-fluid">
 		<div class="page-header">
-			<h2>Item Detail</h2>
+			<h3>Item Detail</h3>
 		</div>
 
 		<div class="alert alert-danger" ng-show="item_error_text">
@@ -9,31 +9,36 @@
 		</div>
 
 		<div class="panel-group">
-			<div class="col-sm-6" ng-repeat="item in galleryItems">
-				<div class="panel panel-default panel-default">
-					<div class="panel-body">
-						<h2>Title:     <span> {{ item.title }}</span></h2>
-						<p>ID: <span> {{ item.id }}</span></p>
-						<p>Date Completed: <span> {{ item.date_completed }}</span></p>
-						<p>Medium: <span> {{ item.medium }} </span></p>
-						<p>Dimensions: <span> {{ item.dimensions }} </span></p>
-						<p>Description: </span> {{ item.description }} </span></p>
-						<div class="buyitem" ng-show="item_for_sale">
-							<p>Price: <span> {{ item.price }} </span>
-								<div style="float:right">
-									<button type="button" 
-									ng-click="buyWork(buywork)" class="btn btn-default btn-sm">Buy</button>
-
+			<div class="file-row-contain">
+				<div class="col-sm-12" ng-repeat="item in galleryItems">
+					<div class="panel panel-default panel-default">
+						<div class="panel-body">
+							<div>
+								<h3>{{ item.title }}</h3>
+								<p>ID: <span> {{ item.id }}</span></p>
+								<p>Date Completed: <span> {{ item.date_completed }}</span></p>
+								<p>Medium: <span> {{ item.medium }} </span></p>
+								<p>Dimensions: <span> {{ item.dimensions }} </span></p>
+							</div>
+							<div>
+								<p>Description: </span> {{ item.description }} </span></p>
+							</div>
+							<div class="form-group" ng-show="item.sold=='FALSE'">
+								<p>Suggested Price: <span> {{ item.price }} </span>
+									<div ng-show="item.sold=='FALSE'">
+										<button class="btn btn-default" type="button" ng-click="buyWork(item.$id)">Buy</button>
+									</div>
+								</div>
+								<div>
+									<img class="img-responsive" ng-src="{{ item.imageurl }}" />
 								</div>
 							</div>
 						</div>
+						<div class="form-group">
+							<button class="btn btn-default" type="button" ng-click="goBack()">Go Back</button>
+						</div>
 					</div>
-				</div>
-				<div>
-					<button type="button" ng-click="goBack()">Go Back</button>
-
 				</div>
 			</div>
 		</div>
 	</div>
-</div>
