--- a/app/partials/admin.html
+++ b/app/partials/admin.html
@@ -1,7 +1,7 @@
 <div class="content"> 
   <div class="container-fluid">
     <div class="page-header">
-      <h2>Add Gallery Items</h2>
+      <h3>Add Gallery Items</h3>
     </div>
 
     <div class="alert alert-danger" ng-show="add_galleryitem_error">
@@ -13,35 +13,25 @@
         <label for="title">Title:</label>
         <input type="text" size="40" ng-model="adding_galleryitem.title" id="title"/>
       </div>
-
-<!--  <div class="form-group"> 
-        <label for="url">Image URL:</label>
-        <input type="text" size="40" ng-model="adding_galleryitem.imageurl" id="url"/>
-      </div> -->
       <div class="form-group"> 
         <label for="url">Image URL:</label>
         <input type="file" id="url" size="150" ng-click="addImage()"/>      
       </div>      
       <div class="form-group">
         <label for="date">Date Completed:</label>
-        <input type="date" size="30" ng-model="adding_galleryitem.date_completed" id="date"/>
+        <input type="text" ng-model="adding_galleryitem.date_completed" 
+        placeholder="yyyy-mm-dd" size="15" id="date"/>
       </div>      
       <div class="form-group">
         <label for="medium">Medium:</label>
-        <select ng-model="adding_galleryitem.medium">
-          <option value="Oil">Oil</option>
-          <option value="Acrylic">Acrylic</option>
-          <option value="Watercolor">Watercolor</option>
-          <option value="Pencil">Pencil</option>
-          <option value="Charcoal">Charcoal</option>
-          <option value="Pastel">Pastel</option>
-          <option value="Sculpture">Sculpture</option>
-        </select>
-      </div>
+        <select ng-model="adding_galleryitem.medium" id="medium">
+          <option ng-repeat="med in mediumlist" value={{med.medium}}>{{med.medium}}</option>
+        </select>  
+      </div> 
 
       <div class="form-group">
-        <label for="description">Description::</label>
-        <textarea rows="5" ng-model="adding_galleryitem.description" 
+        <label for="description">Description:</label>
+        <textarea rows="2" ng-model="adding_galleryitem.description" 
         class="form-control" id="description" ></textarea>
       </div>
       <div class="form-group">
@@ -67,21 +57,20 @@
         </div>                
       </div>
 
-      <div>
-       <input class="btn btn-default btn-sm" type="submit" value="Add Item"/>
+      <div class="form-group">
+       <input class="btn btn-default" type="submit" value="Add Item"/>
      </div>
    </form>      
 
    <div class="container-fluid">
     <div class="row row-eq-height">
-      <div  class="col-sm-6" ng-repeat="item in galleryItems | orderBy:'-date_completed' ">
+      <div  class="col-sm-12" ng-repeat="item in galleryItems | orderBy:'-date_completed' ">
         <div class="panel panel-default panel-default">
           <div class="panel-heading"> 
             <p>Item Number :<span>{{ item.id }}</span>
               <p>Title :<span>{{ item.title }}</span>
               </div>
               <div class="panel-body">
-<!--            <img class="img-responsive" ng-src="images/{{ item.imageurl }}"/> -->
                 <img class="img-responsive" ng-src="{{ item.imageurl }}" />
                 <p>Date : <span> {{ item.date_completed }}</span></p>
                 <p>Medium : <span> {{ item.medium }} </span></p>
