--- a/app/partials/register.html
+++ b/app/partials/register.html
@@ -1,37 +1,57 @@
+<div class="content">
 <div class="container-fluid">
   <section class="login">
     <div class="page-header">
-      <h2>Register</h2>
-    </div>
+      <h3>Register</h3>
+  </div>
 
-    <div class="alert alert-danger" ng-show="register_error_text">
-      {{ register_error_text }}
-    </div>
+  <div class="alert alert-danger" ng-show="message">
+      {{ message }}
+  </div>
 
-    <form role="form" name="registration_form" novalidate ng-submit="register()">
+  <form role="form" name="registration_form" novalidate ng-submit="register()">
 
-     <input type="firstname" name="firstname" placeholder="first name" autofocus 
-     ng-model="user.firstname">
-     <p class="error" ng-show="registration_form.firstname.$invalid && registration_form.firstname.$touched">Must enter a first name</p>
+    <div class="form-group">
+       <input type="firstname" name="firstname" placeholder="first name" size="50" autofocus 
+       ng-model="user.firstname">
+   </div>
+   <div class="form-group">
+       <p class="error" ng-show="registration_form.firstname.$invalid && registration_form.firstname.$touched">Must enter a first name</p>
+   </div>
 
-     <input type="lastname" name="lastname" placeholder="last name" autofocus 
-     ng-model="user.lastname">
-     <p class="error" ng-show="registration_form.lastname.$invalid && registration_form.lastname.$touched">Must enter a last name</p>
+   <div class="form-group">
+       <input type="lastname" name="lastname" placeholder="last name" size="40" autofocus 
+       ng-model="user.lastname">
+   </div>
+   <div class="form-group">
+       <p class="error" ng-show="registration_form.lastname.$invalid && registration_form.lastname.$touched">Must enter a last name</p>
+   </div>
 
-     <input type="email" name="email" placeholder="Email" autofocus 
-     ng-model="user.email">
-     <p class="error" ng-show="registration_form.email.$invalid && registration_form.email.$touched">Must enter a valid email</p>
+   <div class="form-group">
+       <input type="email" name="email" placeholder="Email" size="40" autofocus 
+       ng-model="user.email">
+   </div>
 
-     <input type="password" name="password" placeholder="password" 
-     ng-model="user.password">
+   <div class="form-group">
+       <p class="error" ng-show="registration_form.email.$invalid && registration_form.email.$touched">Must enter a valid email</p>
+   </div>
 
-     <p class="error" ng-show="registration_form.password.$invalid && registration_form.password.$touched">Must enter a password</p>
+   <div class="form-group">
+       <input type="password" name="password" size="50" placeholder="password" 
+       ng-model="user.password">
+   </div>
 
-     <button type="submit" class="btn" 
-     ng-disabled="registration_form.$invalid"
-     >Login</button>
+   <div class="form-group">
+       <p class="error" ng-show="registration_form.password.$invalid && registration_form.password.$touched">Must enter a password</p>
+   </div>
 
-     <!-- <p>or <a href="#/register">Register</a></p> -->
-   </form>
- </section>
+   <div class="form-group">
+      <input type="submit" class="btn btn-default"
+      ng-disabled="registration_form.$invalid" value="Register" />
+      <button class="btn btn-default" type="button" ng-click="goBack()">Go Back</button>    
+  </div>
+      
+  </form>
+</section>
+</div>
 </div>
