--- a/app/partials/works.html
+++ b/app/partials/works.html
@@ -1,7 +1,7 @@
   <div class="content"> 
     <div class="container-fluid">
       <div class="page-header">
-        <h2>Browse the Gallery</h2>
+        <h3>Browse the Gallery</h3>
       </div>
 
       <form role="form">
@@ -13,24 +13,34 @@
           <label for="date">Date:</label>
           <input type="text" ng-model="searchForDate" size="15" id="date"/>
         </div>
+        <div class="form-group">
+          <label for="medium">Medium:</label>
+          <select ng-model="searchForMedium" id="medium">
+            <option ng-repeat="med in mediumlist" value={{med.medium}}>{{med.medium}}</option>
+          </select>  
+        </div> 
       </form> 
 
       <div class="panel-group">
-        <div  class="col-sm-6" ng-repeat="item in galleryItems | 
-            filter: {title: searchForTitle} | 
-            filter: {date_completed: searchForDate} | 
-            orderBy:'-date_completed' ">
-            <div class="panel panel-default panel-default">
-              <div class="panel-heading"> 
-                  <a href="#/works/{{ item.id }}">
-                    <span class="title">{{ item.title }}</span>
-                    <p> {{ item.date_completed }}</p>
-                    <p> {{ item.id }}</p>
+        <div class="file-row-contain">
+          <div  class="col-sm-12" ng-repeat="item in galleryItems | 
+          filter: {title: searchForTitle} | 
+          filter: {date_completed: searchForDate} | 
+          filter: {medium: searchForMedium} |
+          orderBy:'-date_completed' ">
+          <div class="panel panel-default panel-default">
+            <div class="panel-heading"> 
+              <a href="#/works/{{ item.$id }}">
+                <span class="title">{{ item.title }}</span>
+                <p> {{ item.date_completed }}</p>
               </div>
               <div class="panel-body">
-                  <img class="img-responsive" ng-src="images/{{ item.imageurl }}"/>
+                <div class="works-work-image">
+                  <img class="img-responsive" ng-src="{{ item.imageurl }}"/>
+                </div>
               </div>
             </div>
+          </div>
         </div>
       </div>
     </div>
